Revert "Reduce bottom margin of h1 to fix spacing above paragraphs"
This reverts commit f42c9d30d340ef48314421416640aa1bd708c6a3.

--- a/src/app.css
+++ b/src/app.css
@@ -54,7 +54,6 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 2rem;
-  margin-bottom: 0.5rem;
 }
 
 h2 {
